<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.firestar.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_map"
        android:name="com.example.firestar.ui.map.MapFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/nav_video"
        android:name="com.example.firestar.ui.video.VideoFragment"
        android:label="@string/menu_video"
        tools:layout="@layout/fragment_video" />

    <fragment
        android:id="@+id/nav_chat"
        android:name="com.example.firestar.ui.chat.ChatFragment"
        android:label="ChatFragment"
        tools:layout="@layout/fragment_chat"/>

    <fragment
        android:id="@+id/nav_bilibili"
        android:name="com.example.firestar.ui.bilibili.BilibiliFragment"
        android:label="BiliBiliFragment"
        tools:layout="@layout/fragment_bilibili"/>

</navigation>